--- a/_config.yml
+++ b/_config.yml
@@ -56,22 +56,30 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Bianca Viray"
   avatar : "/assets/images/profile.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Mathematics Professor at the University of Washington"
+  location         : "Seattle, WA"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
-    # - label: "Twitter"
-    #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:bviray@uw.edu"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+    - label: "ArXiv"
+      icon: "fas fa-fw fa-link"
+      url: "https://arxiv.org/a/viray_b_1.html"
+    - label: "MathSciNet"
+      icon: "fas fa-fw fa-link"
+      url: "https://mathscinet.ams.org/mathscinet/MRAuthorID/890397"
+    - label: "ORCiD"
+      icon: "fa-brands fa-orcid"   
+      url: "https://orcid.org/0000-0003-3808-2366" 
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    # - label: "Instagram"
-    #   icon: "fab fa-fw fa-instagram"
-    #   url: "https://instagram.com/"
 
 footer:
   links:
