--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "Posts"
     url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Research"
+    url: /research/
+  - title: "Communicating Math"
+    url: /comm_math/
   - title: "About"
     url: /about/
