--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ email: bviray@uw.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Professional site for Bianca Viray, arithmetic geometer and professor at the University of Washington
 # twitter_username: username
+url: "https://b-viray.github.io/"
 baseurl: "" # the subpath of your site, e.g. "/blog"
+repository: "b-viray/b-viray.github.io"
 github_username: b-viray
 minimal_mistakes_skin: default
 search: true
@@ -27,7 +29,7 @@ search: true
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
-permalink: /
+permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
