--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ search: true
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
-permalink: /about.md
+permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
@@ -54,12 +54,13 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-remote-theme
 
 author:
   name   : "Bianca Viray"
   avatar : "/assets/images/profile.jpg"
   bio    : "Mathematics Professor at the University of Washington"
-  location         : "Seattle, WA"
+  location : "Seattle, WA"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -101,7 +102,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true
       share: true
       related: true
