added research collection

--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,11 @@ footer:
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
 
+collections:
+  research:
+    output: true
+    permalink: /:collection/:path/
+
 defaults:
   # _posts
   - scope:
