setting up research collection

--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,7 @@ footer:
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
 
+#collections
 collections:
   research:
     output: true
